--- a/css/style.css
+++ b/css/style.css
@@ -91,12 +91,6 @@ body {
   margin-right: 0; /* Removes margin from the last item */
 }
 
-/* New Stuff */
-/* New Stuff */
-
-
-
-
 .phone-number {
   margin-right: 20px; /* Adjust as necessary */
   color: #fff; /* Adjust the color as per your design */
@@ -105,6 +99,23 @@ body {
   align-items: center;
   padding-left: 5%;
 }
+
+
+.empty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: bold;
+  height: 100px; /* You can adjust the height as needed */
+  background-color: #000; /* Optional: if you want a background color */
+}
+
+/* New Stuff */
+/* New Stuff */
+
+
+
 .layout_padding {
   padding: 75px 0;
 }
@@ -424,9 +435,8 @@ a:focus {
 }
 
 .about_section .detail-box {
-  padding: 40px 0;
+  padding: 45px 0;
   margin-left: 8%;
-  width: 120%;
 }
 
 .about_section .detail-box p {
@@ -632,6 +642,7 @@ a:focus {
   width: 100%;
   height: 450px;
 }
+
 /* Adjust the row containing the form */
 .contact_section .row {
   display: flex;
